<resources>
    <string name="app_name">MyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="buttonTwo" >2</string>
    <string name="buttonOne" >1</string>
    <string name="buttonThree" >3</string>
    <string name="buttonFour" >4</string>
    <string name="buttonFive" >5</string>
    <string name="buttonSix" >6</string>
    <string name="buttonSeven" >7</string>
    <string name="buttonEight" >8</string>
    <string name="buttonNine" >9</string>
    <string name="buttonTen" >0</string>
    <string name="buttonEleven" >C</string>
    <string name="buttonTwelve" >=</string>
    <string name="buttonThirteen" >+</string>
    <string name="buttonFourteen" >-</string>
    <string name="buttonFifteen" >X</string>
    <string name="buttonSixteen" >/</string>
    <string name="ResultTextBox">Result:</string>
</resources>
