<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kelvin.mycalc.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#252626">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTwo"
        android:id="@+id/button2"
        android:minWidth="80dp"
        android:layout_above="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_marginBottom="20dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFive"
        android:id="@+id/button5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEight"
        android:id="@+id/button8"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOne"
        android:id="@+id/button1"
        android:layout_alignBottom="@id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginRight="35dp"

        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonThree"
        android:id="@+id/button3"
        android:minWidth="80dp"
        android:layout_toRightOf="@id/button2"
        android:layout_marginLeft="35dp"
        android:layout_alignBottom="@id/button2"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFour"
        android:id="@+id/button4"
        android:layout_below="@id/button1"
        android:layout_alignLeft="@id/button1"
        android:layout_alignBottom="@id/button5"
        android:layout_alignTop="@id/button5"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSix"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button3"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSeven"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button4"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNine"
        android:id="@+id/button9"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="20dp"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTen"
        android:id="@+id/button0"
        android:minWidth="80dp"
        android:background="#737373"
        android:textColor="#ffffff"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_marginTop="20dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEleven"
        android:id="@+id/buttonC"
        android:layout_alignTop="@+id/button0"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp"
        android:background="#f8a60c" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFifteen"
        android:id="@+id/buttonM"
        android:minWidth="60dp"
        android:layout_alignTop="@+id/buttonD"
        android:layout_toLeftOf="@+id/buttonD"
        android:layout_marginRight="23dp"
        android:background="#486bf7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonThirteen"
        android:id="@+id/buttonA"
        android:layout_marginTop="103dp"
        android:minWidth="60dp"
        android:background="#486bf7"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFourteen"
        android:id="@+id/buttonS"
        android:minWidth="60dp"
        android:layout_toRightOf="@+id/buttonA"
        android:layout_alignTop="@+id/buttonA"
        android:layout_marginLeft="23dp"
        android:background="#486bf7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSixteen"
        android:id="@+id/buttonD"
        android:minWidth="60dp"
        android:layout_alignTop="@+id/buttonS"
        android:layout_alignEnd="@+id/buttonE"
        android:background="#486bf7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTwelve"
        android:id="@+id/buttonE"
        android:minWidth="80dp"
        android:background="#1ec504"
        android:layout_alignTop="@+id/buttonC"
        android:layout_alignStart="@+id/button9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="75dp"
        android:textColor="#000000"
        android:background="#d6d6d6"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:minHeight="40dp"
        android:textAlignment="textEnd"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:inputType="text"
        android:textColor="#000000"
        android:background="#d6d6d6"
        android:minHeight="40dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignStart="@+id/buttonM"
        android:layout_alignEnd="@+id/button3"
        android:inputType="number"
        android:textColor="#000000"
        android:singleLine="false"
        android:background="#d6d6d6"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:minHeight="40dp"
        android:textAlignment="textEnd"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ResultTextBox"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignEnd="@+id/button1" />
</RelativeLayout>
